# myc

./: .clang-tidy  CMakeLists.txt  valgrind
include/myc/: Diagnostic.h  SourceFile.h  Token.h  array.h  hash.h  lexer.h  string.h  util.h
src/: main.c
src/myc/: Diagnostic.c  SourceFile.c  lexer.c  string.c  util.c
